<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_schedule_grey600_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_schedule_grey600_24dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@string/duration"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_duration_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:layout_toLeftOf="@+id/tv_duration_start_value"
                android:layout_toStartOf="@+id/tv_duration_start_value"
                android:maxLines="1"
                android:text="@string/time_start"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_duration_start_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/time_placeholder"
                android:textColor="@android:color/black"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_duration_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:layout_toLeftOf="@+id/tv_duration_end_value"
                android:layout_toStartOf="@+id/tv_duration_end_value"
                android:maxLines="1"
                android:text="@string/time_end"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_duration_end_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/time_placeholder"
                android:textColor="@android:color/black"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_grey"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_person_grey600_24dp"/>

            <TextView
                android:id="@+id/tv_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_teacher"
                android:layout_toRightOf="@+id/iv_teacher"
                android:hint="@string/teacher_placeholder"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/et_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_teacher"
                android:layout_toRightOf="@+id/iv_teacher"
                android:background="@null"
                android:hint="@string/teacher_placeholder"
                android:maxLines="1"
                android:paddingRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_grey"/>

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_event_grey600_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_event_grey600_24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="16dp"
            android:text="Monday"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_grey"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_place_grey600_24dp"/>

            <TextView
                android:id="@+id/tv_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_room"
                android:layout_toRightOf="@+id/iv_room"
                android:hint="@string/room_placeholder"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/et_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_room"
                android:layout_toRightOf="@+id/iv_room"
                android:background="@null"
                android:hint="@string/room_placeholder"
                android:maxLines="1"
                android:paddingRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_grey"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_label_grey600_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_label_grey600_24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:hint="@string/type_placeholder"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_grey"/>

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/rv_colors"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:animateLayoutChanges="false"-->
        <!--android:clipToPadding="false"-->
        <!--android:paddingBottom="16dp"-->
        <!--android:paddingEnd="16dp"-->
        <!--android:paddingRight="16dp"-->
        <!--android:paddingTop="16dp"-->
        <!--android:scrollbars="none"/>-->


    </LinearLayout>

    <!--<FrameLayout-->
    <!--android:id="@+id/fl_progress"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:visibility="gone">-->

    <!--<ProgressBar-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"/>-->
    <!--</FrameLayout>-->

    <!--<FrameLayout-->
    <!--android:id="@+id/fl_no_data"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:visibility="gone">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="@string/no_data"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textSize="16sp"/>-->
    <!--</FrameLayout>-->
</RelativeLayout>